code review fixes